--- a/index/main.css
+++ b/index/main.css
@@ -109,7 +109,8 @@
   padding-top: 5px;
   margin-bottom: 1.4rem;
   background: #002c23;
-  width: 100vw;
+  width: 100%;
+  overflow-y: hidden;
   z-index: 10;
 }
 #main-content .nav .logo {
@@ -355,6 +356,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
   padding: 0 1rem;
+  max-width: 100%;
 }
 #home > div .box {
   height: 150px;
